--- a/cs-fbaul.html
+++ b/cs-fbaul.html
@@ -22,14 +22,15 @@
     <link rel="preload" href="/src/assets/fonts/NeueMontreal/PPNeueMontreal-Thin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/src/assets/fonts/Tobias/TobiasTRIAL-ThinItalic.woff" as="font" type="font/woff2" crossorigin>
 
-</head><body>
+</head>
+<body>
 
 <header id="main-header">
   <div class="container header-container">
 
     <nav id="main-nav">
 
-      <a href="/index.html" class="logo">Mariana Campante</a>
+      <a href="/" class="logo">Mariana Campante</a>
 
       <div id="main-nav-links">
         <ul>
@@ -200,83 +201,94 @@
     
 
 
-<main>
+    <main>
 
-  <section class="caseStudy-section">
-    <div class="section-header">
-        <div class="container section-header-container">
-          <h2>FBAUL Redesign</h2>
-        </div>
-    </div>
-
-    <div class="caseStudy-overview container">
-
-        <div class="caseStudy-overview-aside">
-
-            <div class="caseStudy-overview-title">
-                <h3>Overview</h3>
-            </div>
-
-            <div class="caseStudy-overview-links">
-                <button class="primary-button">
-                    <a href="https://www.behance.net/gallery/224322345/RedesigningFbauls-Website-Case-Study">
-                        <span class="button-text">View on Bēhance</span>
-                    </a>
-                </button>
-            </div>
-        
-        </div>
-
-        <div class="caseStudy-overview-details">
-            <div class="caseStudy-overview-text">
-                <p>Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning.</p>
-            </div>
-
-            <div class="caseStudy-overview-info">
-                <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit">Date</span>
-                    <span class="caseStudy-overview-infobit">December 2025</span>
-                </div>
-                <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit">Deadline</span>
-                    <span class="caseStudy-overview-infobit">4 weeks</span>
-                </div>
-                <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit">Team</span>
-                    <span class="caseStudy-overview-infobit">4 members</span>
-                </div>
-                <div class="caseStudy-overview-infoline infolineLast">
-                    <span class="caseStudy-overview-infobit">Scope</span>
-                    <span class="caseStudy-overview-infobit">Product Design</span>
+        <section class="caseStudy-section">
+            <div class="section-header">
+                <div class="container section-header-container">
+                    <h2>FBAUL Redesign</h2>
                 </div>
             </div>
-        </div>
 
-    </div>
+            <div class="caseStudy-overview container">
 
-    <div class="caseStudy-content container">
+                <div class="caseStudy-overview-aside">
 
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy0.webpp" alt="Wise Jars Introduction">
-        </figure>
+                    <div class="caseStudy-overview-title">
+                        <h3>Overview</h3>
+                    </div>
 
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy1.webp" alt="Wise Jars Discovery">
-        </figure>
+                    <div class="caseStudy-overview-links">
+                        <button class="primary-button">
+                            <a href="https://www.behance.net/gallery/224322345/RedesigningFbauls-Website-Case-Study">
+                                <span class="button-text">View on Bēhance</span>
+                            </a>
+                        </button>
+                    </div>
 
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy2.webp" alt="Wise Jars Definition">
-        </figure>
+                </div>
 
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy3.webp" alt="Wise Jars Final Product">
-        </figure>
+                <div class="caseStudy-overview-details">
+                    <div class="caseStudy-overview-text">
+                        <p>Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate
+                            ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning.</p>
+                    </div>
 
-    </div>
+                    <div class="caseStudy-overview-info">
+                        <div class="caseStudy-overview-infoline">
+                            <span class="caseStudy-overview-infobit">Date</span>
+                            <span class="caseStudy-overview-infobit">December 2025</span>
+                        </div>
+                        <div class="caseStudy-overview-infoline">
+                            <span class="caseStudy-overview-infobit">Deadline</span>
+                            <span class="caseStudy-overview-infobit">4 weeks</span>
+                        </div>
+                        <div class="caseStudy-overview-infoline">
+                            <span class="caseStudy-overview-infobit">Team</span>
+                            <span class="caseStudy-overview-infobit">4 members</span>
+                        </div>
+                        <div class="caseStudy-overview-infoline infolineLast">
+                            <span class="caseStudy-overview-infobit">Scope</span>
+                            <span class="caseStudy-overview-infobit">Product Design</span>
+                        </div>
+                    </div>
+                </div>
 
-  </section>
+            </div>
 
-</main>
+        </section>
+
+        <section class="caseStudy-content-section">
+            <div class="container caseStudy-content">
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/fbaulcasestudy/fbaulcasestudy0.webp"
+                        alt="FBAUL Case Study Introduction">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/fbaulcasestudy/fbaulcasestudy1.webp"
+                        alt="FBAUL Case Study Discovery">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/fbaulcasestudy/fbaulcasestudy2.webp"
+                        alt="FBAUL Case Study Definition">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/fbaulcasestudy/fbaulcasestudy3.webp"
+                        alt="FBAUL Case Study Ideation">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/fbaulcasestudy/fbaulcasestudy4.webp"
+                        alt="FBAUL Case Study Final Product">
+                </figure>
+
+            </div>
+        </section>
+    </main>
 
 <footer>
   <div class="container footer-container">
@@ -286,4 +298,5 @@
   </div>
 </footer>
 </body>
+
 </html>
