--- a/cs-wise.html
+++ b/cs-wise.html
@@ -22,14 +22,15 @@
     <link rel="preload" href="/src/assets/fonts/NeueMontreal/PPNeueMontreal-Thin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/src/assets/fonts/Tobias/TobiasTRIAL-ThinItalic.woff" as="font" type="font/woff2" crossorigin>
 
-</head><body>
+</head>
+<body>
 
 <header id="main-header">
   <div class="container header-container">
 
     <nav id="main-nav">
 
-      <a href="/index.html" class="logo">Mariana Campante</a>
+      <a href="/" class="logo">Mariana Campante</a>
 
       <div id="main-nav-links">
         <ul>
@@ -200,83 +201,124 @@
     
 
 
-<main>
+    <main>
 
-  <section class="caseStudy-section">
-    <div class="section-header">
-        <div class="container section-header-container">
-          <h2>Wise Jars</h2>
-        </div>
-    </div>
-
-    <div class="caseStudy-overview container">
-
-        <div class="caseStudy-overview-aside">
-
-            <div class="caseStudy-overview-title">
-                <h3>Overview</h3>
+        <section class="caseStudy-section">
+            <div class="section-header">
+                <div class="container section-header-container">
+                    <h2>Wise Jars</h2>
+                </div>
             </div>
 
-            <div class="caseStudy-overview-links">
-                <button class="primary-button">
-                    <a href="https://www.behance.net/gallery/225044125/Wise-Bags-Designing-a-New-Feature">
-                        <span class="button-text">View on Bēhance</span>
-                    </a>
-                </button>
+            <div class="caseStudy-overview container">
+
+                <div class="caseStudy-overview-aside">
+
+                    <div class="caseStudy-overview-title">
+                        <h3>Overview</h3>
+                    </div>
+
+                    <div class="caseStudy-overview-links">
+                        <button class="primary-button">
+                            <a href="https://www.behance.net/gallery/225044125/Wise-Bags-Designing-a-New-Feature">
+                                <span class="button-text">View on Bēhance</span>
+                            </a>
+                        </button>
+                    </div>
+
+                </div>
+
+                <div class="caseStudy-overview-details">
+                    <div class="caseStudy-overview-text">
+                        <p>Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate
+                            ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning.</p>
+                    </div>
+
+                    <div class="caseStudy-overview-info">
+                        <div class="caseStudy-overview-infoline">
+                            <span class="caseStudy-overview-infobit">Date</span>
+                            <span class="caseStudy-overview-infobit">March 2025</span>
+                        </div>
+                        <div class="caseStudy-overview-infoline">
+                            <span class="caseStudy-overview-infobit">Deadline</span>
+                            <span class="caseStudy-overview-infobit">7 weeks</span>
+                        </div>
+                        <div class="caseStudy-overview-infoline">
+                            <span class="caseStudy-overview-infobit">Team</span>
+                            <span class="caseStudy-overview-infobit">4 members</span>
+                        </div>
+                        <div class="caseStudy-overview-infoline infolineLast">
+                            <span class="caseStudy-overview-infobit">Scope</span>
+                            <span class="caseStudy-overview-infobit">Product Design</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
+
+
+        </section>
         
-        </div>
+        <section class="caseStudy-content-section">
+            <div class="container caseStudy-content">
 
-        <div class="caseStudy-overview-details">
-            <div class="caseStudy-overview-text">
-                <p>Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning. Helping ChatGPT users navigate ideas and deepen reasoning.</p>
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy0.webp"
+                        alt="Wise Jars 0 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy1.webp"
+                        alt="Wise Jars 1 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy2.webp"
+                        alt="Wise Jars 2 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy3.webp"
+                        alt="Wise Jars 3 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy4.webp"
+                        alt="Wise Jars 4 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy5.webp"
+                        alt="Wise Jars 5 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy6.webp"
+                        alt="Wise Jars 6 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy7.webp"
+                        alt="Wise Jars 7 out of 9">
+                </figure>
+
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy8.webp"
+                        alt="Wise Jars 8 out of 9">
+                </figure>
+
+                <figure class="caseStudy-content-image">
+                    <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy9.webp"
+                        alt="Wise Jars 9 out of 9">
+                </figure>
+
+
             </div>
+        </section>
 
-            <div class="caseStudy-overview-info">
-                <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit">Date</span>
-                    <span class="caseStudy-overview-infobit">March 2025</span>
-                </div>
-                <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit">Deadline</span>
-                    <span class="caseStudy-overview-infobit">7 weeks</span>
-                </div>
-                <div class="caseStudy-overview-infoline">
-                    <span class="caseStudy-overview-infobit">Team</span>
-                    <span class="caseStudy-overview-infobit">4 members</span>
-                </div>
-                <div class="caseStudy-overview-infoline infolineLast">
-                    <span class="caseStudy-overview-infobit">Scope</span>
-                    <span class="caseStudy-overview-infobit">Product Design</span>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="caseStudy-content container">
-
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy0.webp" alt="Wise Jars Introduction">
-        </figure>
-
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy1.webp" alt="Wise Jars Discovery">
-        </figure>
-
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy2.webp" alt="Wise Jars Definition">
-        </figure>
-
-        <figure class="caseStudy-content-image">
-            <img src="/src/assets/img/caseStudies/wisebagscasestudy/wisebagscasestudy3.webp" alt="Wise Jars Final Product">
-        </figure>
-
-    </div>
-
-  </section>
-
-</main>
+    </main>
 
 <footer>
   <div class="container footer-container">
@@ -286,4 +328,5 @@
   </div>
 </footer>
 </body>
+
 </html>
